fix invisible dropdown items bug

--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,80 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-#map {
-  height: 100%;
+* {
+  padding: 0;
+  margin: 0;
 }
-/* Optional: Makes the sample page fill the window. */
+
 html, body {
   width: 100%;
   height: 100%;
 }
 
-.option-panel {
-  position: absolute;
-  padding: 25px;
-  width: 100%;
-  background: white;
-  z-index: 1;
+h2 {
+  margin-top: 0;
 }
-.option-panel input {
-  //margin: -15px;
-  border: none;
-  background: #8DC26F;
-  color: #ffffff;
+
+#map {
   width: 100%;
   height: 100%;
 }
 
-.form-control::placeholder {
-  font-style: italic;
-  color: rgba(0, 0, 0, 0.5);
-}
-.option-panel .card-header .bs-placeholder {
-  color: #FFFFFF !important;
-  font-weight: 400;
-  font-size: 14px;
-  text-transform: uppercase;
+#kilometers {
+  background: rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
-.login-page,
-.km-page {
-  padding: 1% 1% !important;
-  width: 360px;
-  margin: auto;
-}
-
-.km-page {
-  height: 600px;
+.kilometer-panel-container {
   position: absolute;
+  top: 5px;
+  left: 5px;
+  background: white;
+  width: 300px;
+  height: 320px;
+  padding: 25px;
   z-index: 1;
 }
 
-.option-panel button {
-  font-family: "Roboto", sans-serif;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background: #8DC26F;
-  color: #FFFFFF;
-  outline: 0;
+.kilometer-panel-container .container {
   width: 100%;
-  border: 0;
-  border-radius: 0;
-  box-sizing: border-box;
+  padding:0;
+  margin:0;
 }
 
-.option-panel .result {
-  font-family: "Roboto", sans-serif;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background: rgba(242, 242, 242, 1.0);
-  color: rgba(51,51,51, 1.0);
-  outline: 0;
+.kilometer-panel-container .row {
+  margin-left: 0;
+  margin-right: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.col-md-12 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.btn {
+  border: none;
+  border-radius: 0;
+}
+
+.kilometer-panel-container .btn-group {
   width: 100%;
-  border: 0;
-  border-radius: 0;
-  box-sizing: border-box;
 }
 
-.option-panel-form .bs-placeholder {
-  color: #FFFFFF !important;
-  font-weight: 400;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-.option-panel-form h2 {
-  font-family: "Roboto", sans-serif;
-  color: #333;
-  text-align: left;
-}
-
-.option-panel-form p {
-  font-weight: 200;
-  font-family: "Roboto", sans-serif;
-  text-align: left;
+.kilometer-panel-container button,
+.kilometer-panel-container button:hover,
+.kilometer-panel-container button:focus,
+.kilometer-panel-container button:active {
+  background: #8BC34A !important;
+  color: white !important;
+  height: 45px;
 }
 
 .dropdown-menu {
-  background: #F1F2F7;
+  width: 100% !important;
   border-radius: 0;
 }
-
-.dropdown-menu .dropdown-header {
-  color: #333;
-  font-size: 1.1rem;
-}
-.dropdown-menu .dropdown-header:hover {
-  background: none;
-  color: #333;
-}
-
-.dropdown-menu ul li {
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-}
-
-.option-panel-form a {
-  font-weight: 200;
-  color: #333;
-}
-
-.dropdown-menu li:hover,
-.dropdown-menu li:active,
-.dropdown-menu li:focus,
-.dropdown-menu li.active {
-  background: #8DC26F;
-}
-
-.dropdown-menu li:hover > a,
-.dropdown-menu li:active > a,
-.dropdown-menu li:focus > a,
-.dropdown-menu li.active > a {
-  color: white !important;
-}
-
-
-
-
-
 
 .form {
   position: relative;
@@ -157,6 +97,7 @@ html, body {
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  line-height: 14px;
 }
 
 .form input#inputPin {
